--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   <body>
     <h1>Hola mundo</h1>
     <p>Parrafo de nuevo xd</p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi laudantium
+      fuga quaerat earum sapiente quos tenetur qui incidunt, quia cumque nulla
+      omnis unde consectetur doloribus dolore temporibus voluptatum
+      exercitationem accusantium?
+      <footer>
+        <a href="www.rollingcodeschool.com" target="_blank">Visita nuestra web</a>
+      </footer>
+    </p>
   </body>
 </html>
