agregamos mas info a index y home, ademas de navegacion

--- a/home.html
+++ b/home.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home</title>
-</head>
-<body>
-    <H1>Home</H1>
+  </head>
+  <body>
+    <h1>Home</h1>
+    <hr>
+    <a href="index.html">Volver</a>
     <p>Parrafo de prueba</p>
-</body>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus similique
+      iusto necessitatibus non. Nemo animi culpa cupiditate excepturi
+      aspernatur, commodi temporibus numquam illo officia ipsa unde
+      necessitatibus optio obcaecati non.
+    </p>
+  </body>
 </html>
