--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
       fuga quaerat earum sapiente quos tenetur qui incidunt, quia cumque nulla
       omnis unde consectetur doloribus dolore temporibus voluptatum
       exercitationem accusantium?
-      <footer>
-        <a href="www.rollingcodeschool.com" target="_blank">Visita nuestra web</a>
-      </footer>
     </p>
+    <ul>
+      <li><a href="home.html"></a></li>
+      <li>Portafolio</li>
+      <li>Contacto</li>
+    </ul>
+    <footer>
+      <a href="www.rollingcodeschool.com" target="_blank">Visita nuestra web</a>
+    </footer>
   </body>
 </html>
