--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/estilos.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <nav class="navbar navbar-expand-lg bg-light px-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"
+            ><img
+              class="img-logo"
+              src="/assets/628f991b7b3031555764f8c5.png"
+              alt="Logo de la pagina"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -30,7 +36,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Comunidad</a>
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Comunidad</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Planes</a>
@@ -39,7 +47,7 @@
                 <a class="nav-link" href="#">Contactanos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Crear cuenta</a>
+                <button class="btn btn-dark">Crear cuenta</button>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Iniciar sesion</a>
