carousel terminado con overlay y texto con boton

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <img src="/assets/eldenring-11-4k-1623357441334_2bqw.1080.webp" class="d-block w-100" alt="..." />
           </div>
         </div>
+        <div class="overlay d-flex flex-column justify-content-center align-items-center text-white">
+          <h1>Guia de elden ring para no suicidarse</h1>
+          <button class="btn btn-light">Intentar hoy</button>
+        </div>
         <button
           class="carousel-control-prev"
           type="button"
