--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="stylesheet" href="/proyecto-curso-git/css/estilos.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img-logo"
-              src="/assets/628f991b7b3031555764f8c5.png"
+              src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png"
               alt="Logo de la pagina"
           /></a>
           <button
@@ -62,21 +62,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="/assets/eldenring-03-4k-1623357441331_8t5c.1080.webp"
+              src="/proyecto-curso-git/assets/eldenring-03-4k-1623357441331_8t5c.1080.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="/assets/eldenring-05-4k-1623357441335_wq5t.1080.webp"
+              src="/proyecto-curso-git/assets/eldenring-05-4k-1623357441335_wq5t.1080.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="/assets/eldenring-11-4k-1623357441334_2bqw.1080.webp"
+              src="/proyecto-curso-git/assets/eldenring-11-4k-1623357441334_2bqw.1080.webp"
               class="d-block w-100"
               alt="..."
             />
@@ -107,6 +107,35 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <section id="planes" class="container mt-4">
+        <div class="row d-flex justify-content-around">
+          <div class="card" style="width: 18rem;">
+            <img src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
