Se estilizo las tarjetas colocadas y se sumo imagenes al proyecto, tambien el navbar ahora dirige a esa seccion

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Planes</a>
+                <a class="nav-link" href="#planes">Primeros Jefes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contactanos</a>
@@ -108,29 +108,34 @@
         </button>
       </div>
       <section id="planes" class="container mt-4">
+        <div class="row p-3">
+          <div class="col text-center">
+            <h1>Primeros jefes</h1>
+          </div>
+        </div>
         <div class="row d-flex justify-content-around">
-          <div class="card" style="width: 18rem;">
-            <img src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png" class="card-img-top" alt="...">
+          <div class="card p-0" style="width: 18rem;">
+            <img src="./assets/primero.jpg" class="card-img-top w-100" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Margit, el Augurio Caido</h5>
+              <p class="card-text">es un guardián que aparece en el camino hacia el Castillo de Velo Tormentoso. Es un jefe temprano que utiliza un bastón y magia arcana para atacar.</p>
+              <a href="#" class="btn btn-primary">Como Derrotar</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png" class="card-img-top" alt="...">
+          <div class="card p-0" style="width: 18rem;">
+            <img src="./assets/segundo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Godrick el Injertado</h5>
+              <p class="card-text">es el señor del Castillo de Velo Tormentoso, conocido por injertar partes de otros seres en su cuerpo. Combina ataques físicos y mágicos en su grotesca forma.</p>
+              <a href="#" class="btn btn-primary">Como Derrotar</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png" class="card-img-top" alt="...">
+          <div class="card p-0" style="width: 18rem;">
+            <img src="./assets/tercero.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Renalla, reina de la luna Llena</h5>
+              <p class="card-text">es una poderosa hechicera que reside en la Academia de Raya Lucaria. Utiliza potentes hechizos y puede invocar criaturas en combate.</p>
+              <a href="#" class="btn btn-primary">Como Derrotar</a>
             </div>
           </div>
         </div>
