Se corrigio errores con linkeado de imagenes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/proyecto-curso-git/css/estilos.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
           <a class="navbar-brand" href="#"
             ><img
               class="img-logo"
-              src="/proyecto-curso-git/assets/628f991b7b3031555764f8c5.png"
+              src="./assets/628f991b7b3031555764f8c5.png"
               alt="Logo de la pagina"
           /></a>
           <button
@@ -62,21 +62,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="/proyecto-curso-git/assets/eldenring-03-4k-1623357441331_8t5c.1080.webp"
+              src="./assets/eldenring-03-4k-1623357441331_8t5c.1080.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="/proyecto-curso-git/assets/eldenring-05-4k-1623357441335_wq5t.1080.webp"
+              src="./assets/eldenring-05-4k-1623357441335_wq5t.1080.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="/proyecto-curso-git/assets/eldenring-11-4k-1623357441334_2bqw.1080.webp"
+              src="./assets/eldenring-11-4k-1623357441334_2bqw.1080.webp"
               class="d-block w-100"
               alt="..."
             />
