--- a/index.html
+++ b/index.html
@@ -141,6 +141,31 @@
         </div>
 
       </section>
+      <section id="clases" class="container mt-4">
+        <div class="row p-3">
+          <div class="col text-center">
+            <h1>Clases</h1>
+          </div>
+          <div class="row d-flex justify-content-around">
+            <div class="card p-0" style="width: 18rem;">
+              <img src="./assets/clase1.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div><div class="card p-0" style="width: 18rem;">
+              <img src="./assets/clase2.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div><div class="card p-0" style="width: 18rem;">
+              <img src="./assets/clase3.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
